--- a/index.html
+++ b/index.html
@@ -116,21 +116,22 @@
       <div class="col s12 m12 l4">
         <div class="card">
           <div class="card-image waves-effect waves-block waves-red">
-            <img class="activator" src="assets/images/falconsnewsscrape.png">
+            <img class="activator" src="assets/images/catchoftheday.png">
           </div>
           <div class="card-content">
-            <span class="card-title activator black-text text-darken-4" id="cardtitle">Atlanta Falcons News<i class="material-icons right">more_vert</i></span>
-            <p><a target="_blank" href="https://allthenewsapp2017.herokuapp.com/">Click Here For Falcons News!</a></p>
+            <span class="card-title activator black-text text-darken-4" id="cardtitle">Catch of the Day<i class="material-icons right">more_vert</i></span>
+            <p><a target="_blank" href="https://geraldperriman.github.io/Catch-of-the-Day/">A Online Fish Market</a></p>
           </div>
           <div class="card-reveal">
-            <span class="card-title black-text text-darken-4" id="cardtitle">Atlanta Falcons News<i class="material-icons right">close</i></span>
-            <p> A news web app that lets users leave comments on the latest Atlanta Falcons news using Mongoose and Cheerio to scrape news from the Atlanta Falcons Reddit site.
+            <span class="card-title black-text text-darken-4" id="cardtitle">Catch of the Day<i class="material-icons right">close</i></span>
+            <p> The Catch of the Day Web App a real-time app for a fresh seafood market where price and quantity available are variable and can change at a moment's notice. I created  this app using React,Firebase and HTML5 LocalStorage.
               <br>
               <br>
-              This web application utilizes HTML, Bootstrap, and Javascript on the front end. The back end utilizes Mongoose and Cheerio.
+                Catch of the Day App uses Firebase for real-time application persistence and authentication while also using Local Storage for
+                browser persistence. I made the App as part of the course for Wes Bos- React for beginners.
                <br>
                <br>
-               Get your football news here:</p><a target="_blank" href= "https://allthenewsapp2017.herokuapp.com/"/>ATL Falcons News</a>
+               Check out the Catch of the Day!:</p><a target="_blank" href= "https://geraldperriman.github.io/Catch-of-the-Day/"/>ATL Falcons News</a>
           </div>
         </div>
       </div>
