--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           </div>
           <div class="card-content">
             <span class="card-title activator black-text text-darken-4" id="cardtitle">Check With Me<i class="material-icons right">more_vert</i></span>
-            <p><a target="_blank" href="https://geraldperriman.github.io/checkwithme/homepage.html?phone=">View the site here!</a></p>
+            <p><a target="_blank" href="https://geraldperriman.github.io/checkwithme/homepage.html?phone=">Check With Me</a></p>
           </div>
           <div class="card-reveal">
             <span class="card-title black-text text-darken-4" id="cardtitle">Check With Me<i class="material-icons right">close</i></span>
@@ -120,7 +120,7 @@
           </div>
           <div class="card-content">
             <span class="card-title activator black-text text-darken-4" id="cardtitle">Catch of the Day<i class="material-icons right">more_vert</i></span>
-            <p><a target="_blank" href="https://geraldperriman.github.io/Catch-of-the-Day/">A Online Fish Market</a></p>
+            <p><a target="_blank" href="https://geraldperriman.github.io/Catch-of-the-Day/">Online Fish Market</a></p>
           </div>
           <div class="card-reveal">
             <span class="card-title black-text text-darken-4" id="cardtitle">Catch of the Day<i class="material-icons right">close</i></span>
