--- a/index.html
+++ b/index.html
@@ -172,14 +172,14 @@
         </div>
         <div class="row s12 m12 l6" id="section1">
               <span class="s4" ><a href="https://developer.mozilla.org/en-US/docs/Web/CSS"><img class="img-responsive"  src="assets/images/css3.png" alt="css3" /></span></a>
-              <span class="s4" ><a href="https://www.w3schools.com/html/html5_intro.asp"  target="_blank"><img class="img-responsive"  src="assets/images/html.png" alt="HTML" /></span>
+              <span class="s4" ><a href="https://www.w3schools.com/html/html5_intro.asp"  target="_blank"><img class="img-responsive"  src="assets/images/HTML.png" alt="HTML" /></span>
               <span class="s4" ><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Introduction" target="_blank"><img class="img-responsive" src="assets/images/JS.png" alt="Javascript" /></span>
               <span class="s4" ><a href="https://www.mongodb.com/" target="_blank"><img class="img-responsive"  src="assets/images/mongodb.jpg" alt="mongodb" /></span>
               <span class="s4" ><a href="https://reactjs.org/" target="_blank"><img class="img-responsive" src="assets/images/react.png" alt="react" /></span>
       <div class="section">
       </div>
           <div class ="row s12 m12 l6" id="section2">
-              <span class="s4" ><a href="http://jquery.com/"  target="_blank"><img class="jQuery" class="img-responsive" src="assets/images/JQuery.png" alt="jQuery" /></span>
+              <span class="s4" ><a href="http://jquery.com/"  target="_blank"><img class="jQuery" class="img-responsive" src="assets/images/jquery.png" alt="jQuery" /></span>
               <span class="s4"><a href="https://nodejs.org/en/" target="_blank"><img class="node"  class="img-responsive" src="assets/images/node.png" alt="node" /></span>
               <span class="s4"><a href="https://firebase.google.com/"  target="_blank"><img class="firebase" class="img-responsive" src="assets/images/firebase.png" alt="firebase" /></span>
               <span class="s4"><a href="https://dashboard.heroku.com/" target="_blank"><img class="heroku" class="img-responsive" src="assets/images/heroku.png" alt="heroku" /></span>
