--- a/index.html
+++ b/index.html
@@ -124,14 +124,14 @@
           </div>
           <div class="card-reveal">
             <span class="card-title black-text text-darken-4" id="cardtitle">Catch of the Day<i class="material-icons right">close</i></span>
-            <p> The Catch of the Day Web App a real-time app for a fresh seafood market where price and quantity available are variable and can change at a moment's notice. I created  this app using React,Firebase and HTML5 LocalStorage.
+            <p> The Catch of the Day Web App a real-time app , where price and quantity available are variable and can change at a moment's notice. I created this app using React,Firebase &amp; HTML5 LocalStorage.
               <br>
               <br>
                 Catch of the Day App uses Firebase for real-time application persistence and authentication while also using Local Storage for
                 browser persistence. I made the App as part of the course for Wes Bos- React for beginners.
                <br>
                <br>
-               Check out the Catch of the Day!:</p><a target="_blank" href= "https://geraldperriman.github.io/Catch-of-the-Day/"/>ATL Falcons News</a>
+               Check out the Catch of the Day!:</p><a target="_blank" href= "https://geraldperriman.github.io/Catch-of-the-Day/"/>Catch of the Day!</a>
           </div>
         </div>
       </div>
@@ -183,7 +183,7 @@
               <span class="s4"><a href="https://nodejs.org/en/" target="_blank"><img class="node"  class="img-responsive" src="assets/images/node.png" alt="node" /></span>
               <span class="s4"><a href="https://firebase.google.com/"  target="_blank"><img class="firebase" class="img-responsive" src="assets/images/firebase.png" alt="firebase" /></span>
               <span class="s4"><a href="https://dashboard.heroku.com/" target="_blank"><img class="heroku" class="img-responsive" src="assets/images/heroku.png" alt="heroku" /></span>
-              <span class="s3"><a href="https://www.mysql.com/" target="_blank"><img class="mysql" class="img-responsive" src="assets/images/mysql.png" alt="mysql" /></span>
+              <span class="s3"><a href="https://www.mysql.com/" target="_blank"><img class="mysql" class="img-responsive" src="assets/images/mysql.png" alt="mysql" /></span></a>
           </div>
       </div>
     </div>
@@ -231,7 +231,7 @@
     </div>
     <div class="footer-copyright">
       <div class="container" id="Contact">
-      Made by <a class="amber-text " href="assets/Gerald PerrimanResume.pdf">Gerald Perriman</a>
+      <!-- Made by <a class="amber-text " href="assets/Gerald PerrimanResume.pdf">Gerald Perriman</a> -->
       </div>
     </div>
   </footer>
